Cookies Management Complete

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <dialog class="manage-cookies">
             <button type="button" class="close-dialog">X</button>
             <h3>Manage Cookie Preferences</h3>
-            <div>
+            <div class="cookies-inputs">
                 <p>Most Microsoft websites use cookies. Cookies are small text files placed on your device to store data so web servers can use it later. Microsoft and our third-party partners use cookies to remember your preferences and settings, help you log in, show you personalised ads and analyse how well our websites are working. For more info, see the Cookies and similar technologies section of the <a href="#">Privacy Statement</a>.</p>
                 
                 <h4>Required</h4>
