--- a/index.html
+++ b/index.html
@@ -78,7 +78,77 @@
                     <li><a href="#">Deals</a></li>
                     <li><a href="#">Support</a></li>
                     <li id="more_dropdown"><a href=#>More</a></li>
-                    <li id="all_microsoft"><a href="#">All Microsoft</a></li>
+                    <li id="all_microsoft">
+                        <a href="#">All Microsoft</a>
+                        <div class="all_micro_content">
+                            <div>
+                                <ul class="footer-column">
+                                    <li>Software</li>
+                                    <a href="#"><li>Windows Apps</li></a>
+                                    <a href="#"><li>AI</li></a>
+                                    <a href="#"><li>OneDrive</li></a>
+                                    <a href="#"><li>Outlook</li></a>
+                                    <a href="#"><li>Skype</li></a>
+                                    <a href="#"><li>OneNote</li></a>
+                                    <a href="#"><li>Microsoft Teams</li></a>
+                                </ul>
+                                <ul class="footer-column">
+                                    <li>PCs & Devices</li>
+                                    <a href="#"><li>Computers</li></a>
+                                    <a href="#"><li>Shop Xbox</li></a>
+                                    <a href="#"><li>Accessories</li></a>
+                                    <a href="#"><li>VR & mixed reality</li></a>
+                                    <a href="#"><li>Phones</li></a>
+                                </ul>
+                                <ul class="footer-column">
+                                    <li>Entertainment</li>
+                                    <a href="#"><li>Xbox Game Pass Ultimate</li></a>
+                                    <a href="#"><li>Xbox Live Gold</li></a>
+                                    <a href="#"><li>Xbox games</li></a>
+                                    <a href="#"><li>PC games</li></a>
+                                    <a href="#"><li>Windows digital games</li></a>
+                                    <a href="#"><li>Movies & TV</li></a>
+                                </ul>
+                                <ul class="footer-column">
+                                    <li>Business</li>
+                                    <a href="#"><li>Microsoft Cloud</li></a>
+                                    <a href="#"><li>Microsoft Security</li></a>
+                                    <a href="#"><li>Azure</li></a>
+                                    <a href="#"><li>Dynamics 365</li></a>
+                                    <a href="#"><li>Microsoft 365 for business</li></a>
+                                    <a href="#"><li>Microsoft Industry</li></a>
+                                    <a href="#"><li>Microsoft Power Platform</li></a>
+                                    <a href="#"><li>Microsoft 365</li></a>
+                                </ul>
+                                <ul class="footer-column">
+                                    <li>Developer & IT</li>
+                                    <a href="#"><li>Developer Center</li></a>
+                                    <a href="#"><li>Documentation</li></a>
+                                    <a href="#"><li>Microsoft Learn</li></a>
+                                    <a href="#"><li>Microsoft Tech Community</li></a>
+                                    <a href="#"><li>Azure Marketplace</li></a>
+                                    <a href="#"><li>AppSource</li></a>
+                                    <a href="#"><li>Visual Studio</li></a>
+                                </ul>
+                                <ul class="footer-column">
+                                    <li>Other</li>
+                                    <a href="#"><li>Microsoft Rewards</li></a>
+                                    <a href="#"><li>Free downloads & security</li></a>
+                                    <a href="#"><li>Education</li></a>
+                                    <a href="#"><li>Virtual workshops and training</li></a>
+                                    <a href="#"><li>Gift cards</li></a>
+                                    <a href="#"><li>Licensing</li></a>
+                                    <a href="#"><li>Microsoft Experience Centre</li></a>
+                                </ul>
+                            </div>
+                            <div>
+                                <button type="button" class="go-to-sitemap">
+                                    VIEW SITEMAP
+                                    <img src="/images/left-arrow.svg" />
+                                </button>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
                 <div class="nav-icons-right">
                     <a href="#"><img src="images/search.svg" alt="Search"></a>
