DropDown Button Functionality Done

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
                     <li><a href="#">Support</a></li>
                     <li id="more_dropdown"><a href=#>More</a></li>
                     <li id="all_microsoft">
-                        <a href="#">All Microsoft</a>
+                        <a href="#"><span>All Microsoft</span></a>
+                        <img src="/images/left-arrow.svg" />
                         <div class="all_micro_content">
                             <div>
                                 <ul class="footer-column">
