--- a/index.html
+++ b/index.html
@@ -77,7 +77,21 @@
                     <li><a href="#">Xbox</a></li>
                     <li><a href="#">Deals</a></li>
                     <li><a href="#">Support</a></li>
-                    <li id="more_dropdown"><a href=#>More</a></li>
+                    <li id="more_dropdown">
+                        <a href=#><span>More</span></a>
+                        <img src="/images/left-arrow.svg" />
+                        <!-- More 1 -->
+                        <div class="more_div more_1">
+                            <div>Deals</div>
+                            <div>Support</div>
+                        </div>
+                        <!-- More 2 -->
+                        <div class="more_div more_2">
+                            <div>Xbox</div>
+                            <div>Deals</div>
+                            <div>Support</div>
+                        </div>
+                    </li>
                     <li id="all_microsoft">
                         <a href="#"><span>All Microsoft</span></a>
                         <img src="/images/left-arrow.svg" />
