Tablet size dropdown update

--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
     <div class="body-container">
         <div class="container">
             <nav>
+                <div class="hamburger_button">
+                    <input type="checkbox" id="hamburger_icon"/>
+                    <!-- style="display: none;" -->
+                </div>
                 <img alt="Microsoft" src="https://i.ibb.co/wwLhz98/logo.png" class="logo">
                 <ul class="main-nav">
                     <li><a href="#">Microsoft 365</a></li>
@@ -96,7 +100,7 @@
                         <a href="#"><span>All Microsoft</span></a>
                         <img src="/images/left-arrow.svg" />
                         <div class="all_micro_content">
-                            <div>
+                            <div id="column-container">
                                 <ul class="footer-column">
                                     <li>Software</li>
                                     <a href="#"><li>Windows Apps</li></a>
