--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 <div class="hamburger_button">
                     <input type="checkbox" id="hamburger_icon"/>
                     <!-- style="display: none;" -->
+                    <div class="hamburger-line-container">
+                        <div></div>
+                    </div>
                 </div>
                 <img alt="Microsoft" src="https://i.ibb.co/wwLhz98/logo.png" class="logo">
                 <ul class="main-nav">
