Search Bar updated

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <button id="search_submit" type="submit">
                         <img src="images/search.svg" alt="Search">
                     </button>
-                    <input type="search" placeholder="Search Microsoft.com" />
+                    <input type="search" placeholder="Search Microsoft.com" id="search_input"/>
                 </div>
                 <div class="hamburger_button">
                     <input type="checkbox" id="hamburger_icon"/>
