First Nav Container Complete

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <div class="container">
             <nav>
                 <div class="search_return_btn">
+                    <span>Cancel</span>
                     <img alt="Cancel Search" src="/images/big-left-arrow.svg" />
                 </div>
                 <div class="search_bar">
@@ -181,9 +182,9 @@
                     </li>
                 </ul>
                 <div class="nav-icons-right">
-                    <a href="#" id="search_btn"><img src="images/search.svg" alt="Search"></a>
-                    <a href="#"><img src="images/shopping-cart.svg" alt="Trolley"></a>
-                    <a href="#"><img src="images/sign-in.svg" alt="Account"></a>
+                    <a href="#" id="search_btn"><img src="images/search.svg" alt="Search" title="Search Microsoft.com"></a>
+                    <a href="#"><img src="images/shopping-cart.svg" alt="Trolley" title="0 items in shopping cart"></a>
+                    <a href="#"><img src="images/sign-in.svg" alt="Account" title="Sign in to your account"></a>
                 </div>
             </nav>
         </div>
