--- a/index.html
+++ b/index.html
@@ -189,14 +189,46 @@
             </nav>
         </div>
         <div class="container">
-            <section class="showcase">
-                <h2>Microsoft Store Sustainability</h2>
-                <p>Explore Microsoft's commitment to sustainability including, our products that use eco-friendly materials and information on how you can make a more environmentally informed purchase</p>
-                <div class="btn">
-                    <a>
-                        <span>Discover more</span>
-                        <img src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+            <section class="slider">
+                <div class="slide">
+                    <img src="/images/showcase_xlarge.png" alt="Showcase Image Slide 1" />
+                    <div>
+                        <h2>Microsoft Store Sustainability</h2>
+                        <p>Explore Microsoft's commitment to sustainability including, our products that use eco-friendly materials and information on how you can make a more environmentally informed purchase</p>
+                        <div class="btn">
+                            <a>
+                                <span>Discover more</span>
+                                <img src="images/right-arrow.svg" alt="Proceed">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="slide">
+                    <img src="/images/microsoft365_xlarge.JPG" alt="Showcase Image Slide 2" />
+                    <div>
+                        <h2>Microsoft 365</h2>
+                        <p>Turn your ideas into reality, stay safer online and off, and focus on what matters most with Microsoft 365 apps</p>
+                        <div class="btn_group">
+                            <div class="btn">
+                                <a>
+                                    <span>For one person</span>
+                                </a>
+                            </div>
+                            <a href="#">
+                                <span>For up to six people</span>
+                                <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="slider-nav">
+                    <button class="slider__btn slider__btn--play"><img src="/images/play-button.svg" alt="Play Slideshow"></button>
+                    <button class="slider__btn slider__btn--left"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
+                    <div class="dots">
+                        <!-- Generated Dots -->
+                    </div>
+                    <button class="slider__btn slider__btn--right"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
+                    <div class="dots"></div>
                 </div>
             </section>
         </div>
@@ -350,6 +382,18 @@
                     <a href="#">
                         <span>Learn more</span>
                         <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                    </a>
+                </div>
+            </section>
+        </div>
+        <div class="container">
+            <section class="showcase-three">
+                <h2>For Earth Day and everyday</h2>
+                <p>This April, we celebrate the boundary pushing and innovation that helps to create a brighter, cleaner, more sustainable future for us all</p>
+                <div class="btn">
+                    <a>
+                        <span>Learn more</span>
+                        <img src="images/right-arrow.svg" alt="Proceed">
                     </a>
                 </div>
             </section>
