--- a/index.html
+++ b/index.html
@@ -221,16 +221,15 @@
                         </div>
                     </div>
                 </div>
-                <div class="slider-nav">
-                    <button class="slider__btn slider__btn--play"><img src="/images/play-button.svg" alt="Play Slideshow"></button>
-                    <button class="slider__btn slider__btn--left"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
-                    <div class="dots">
-                        <!-- Generated Dots -->
-                    </div>
-                    <button class="slider__btn slider__btn--right"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
-                    <div class="dots"></div>
-                </div>
             </section>
+            <div class="slider-nav">
+                <button class="slider__btn slider__btn--play pause"><img src="/images/play-button_2.png" alt="Play Slideshow"></button>
+                <button class="slider__btn slider__btn--left"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
+                <div class="dots">
+                    <!-- Generated Dots -->
+                </div>
+                <button class="slider__btn slider__btn--right"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
+            </div>
         </div>
         <div class="container">
             <section class="linkcards">
