Showcases update - media queries

--- a/index.html
+++ b/index.html
@@ -222,14 +222,14 @@
                     </div>
                 </div>
             </section>
-            <div class="slider-nav">
-                <button class="slider__btn slider__btn--play pause"><img src="/images/play-button_2.png" alt="Play Slideshow"></button>
-                <button class="slider__btn slider__btn--left"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
-                <div class="dots">
-                    <!-- Generated Dots -->
-                </div>
-                <button class="slider__btn slider__btn--right"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
+        </div>
+        <div class="slider-nav">
+            <button class="slider__btn slider__btn--play pause"><img src="/images/play-button_2.png" alt="Play Slideshow"></button>
+            <button class="slider__btn slider__btn--left"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
+            <div class="dots">
+                <!-- Generated Dots -->
             </div>
+            <button class="slider__btn slider__btn--right"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
         </div>
         <div class="container">
             <section class="linkcards">
@@ -325,13 +325,16 @@
         </div>
         <div class="container">
             <section class="showcase-two">
-                <h2>Xbox controllers</h2>
-                <p>Elite, wireless, adaptive - find the controller that fits your style of play</p>
-                <div class="btn">
-                    <a>
-                        <span>Shop now</span>
-                        <img src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                <img src="/images/controllers_xlarge.png" alt="Xbox Controllers">
+                <div id="showcase-internaldiv">
+                    <h2>Xbox controllers</h2>
+                    <p>Elite, wireless, adaptive - find the controller that fits your style of play</p>
+                    <div class="btn">
+                        <a>
+                            <span>Shop now</span>
+                            <img src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
@@ -387,13 +390,16 @@
         </div>
         <div class="container">
             <section class="showcase-three">
-                <h2>For Earth Day and everyday</h2>
-                <p>This April, we celebrate the boundary pushing and innovation that helps to create a brighter, cleaner, more sustainable future for us all</p>
-                <div class="btn">
-                    <a>
-                        <span>Learn more</span>
-                        <img src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                <img src="/images/showcase3_xlarge.jpg" alt="Earth Day">
+                <div id="showcase-internaldiv">
+                    <h2>For Earth Day and every day</h2>
+                    <p>This April, we celebrate the boundary pushing and innovation that helps to create a brighter, cleaner, more sustainable future for us all</p>
+                    <div class="btn">
+                        <a>
+                            <span>Learn more</span>
+                            <img src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
             </section>
             <section class="socialarea">
