Styling Updates - Media Queries

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                         <div class="btn">
                             <a>
                                 <span>Discover more</span>
-                                <img src="images/right-arrow.svg" alt="Proceed">
+                                <!-- <img src="images/right-arrow.svg" alt="Proceed"> -->
                             </a>
                         </div>
                     </div>
@@ -234,40 +234,28 @@
         <div class="container">
             <section class="linkcards">
                 <div class="card">
-                    <a href="#">
                         <img src="/images/windows.svg" alt="Windows logo">
-                        <h3>Choose your Microsoft 365</h3>
-                    </a>
+                        <a href="#"><h3>Choose your Microsoft 365</h3></a>
                 </div>
                 <div class="card">
-                    <a href="#">
                         <img src="/images/tablet.svg" alt="Tablet icon">
-                        <h3>Shop for Surface devices</h3>
-                    </a>
+                        <a href="#"><h3>Shop for Surface devices</h3></a>
                 </div>
                 <div class="card">
-                    <a href="#">
                         <img src="/images/xbox.svg" alt="Xbox logo">
-                        <h3>Buy Xbox games and consoles</h3>
-                    </a>
+                        <a href="#"><h3>Buy Xbox games and consoles</h3></a>
                 </div>
                 <div class="card">
-                    <a href="#">
                         <img src="/images/windows.svg" alt="Windows logo">
-                        <h3>Get Windows 11</h3>
-                    </a>
+                        <a href="#"><h3>Get Windows 11</h3></a>
                 </div>
                 <div class="card">
-                    <a href="#">
                         <img src="/images/laptop.svg" alt="Laptop icon">
-                        <h3>Find your next PC</h3>
-                    </a>
+                        <a href="#"><h3>Find your next PC</h3></a>
                 </div>
                 <div class="card">
-                    <a href="#">
                         <img src="/images/briefcase.svg" alt="Briefcase icon">
-                        <h3>Shop Business</h3>
-                    </a>
+                        <a href="#"><h3>Shop Business</h3></a>
                 </div>
             </section>
         </div>
@@ -332,7 +320,7 @@
                     <div class="btn">
                         <a>
                             <span>Shop now</span>
-                            <img src="images/right-arrow.svg" alt="Proceed">
+                            <!-- <img src="images/right-arrow.svg" alt="Proceed"> -->
                         </a>
                     </div>
                 </div>
@@ -397,7 +385,7 @@
                     <div class="btn">
                         <a>
                             <span>Learn more</span>
-                            <img src="images/right-arrow.svg" alt="Proceed">
+                            <!-- <img src="images/right-arrow.svg" alt="Proceed"> -->
                         </a>
                     </div>
                 </div>
