--- a/index.html
+++ b/index.html
@@ -267,10 +267,12 @@
                     <p>
                         Do it all with a perfect balance of sleek, ultra-thin design, multitasking speed and improved performance.
                     </p>
-                    <a href="#">
-                        <span>Shop now</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                    <div>
+                        <a href="#">
+                            <span>Shop now</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
                 <div class="imgcard">
                     <img src="/images/card2.png" alt="">
@@ -278,14 +280,18 @@
                     <p>
                         Premium Office apps, extra cloud storage, advanced security, and more - all in one convenient subscription.
                     </p>
-                    <a href="#">
-                        <span>For up to 6 people</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
-                    <a href="#">
-                        <span>For 1 person</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                    <div>
+                        <a href="#">
+                            <span>For up to 6 people</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <span>For 1 person</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
                 <div class="imgcard">
                     <img src="/images/card3.png" alt="">
@@ -293,10 +299,12 @@
                     <p>
                         Next-gen performance in the smallest Xbox ever.
                     </p>
-                    <a href="#">
-                        <span>Shop now</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                    <div>
+                        <a href="#">
+                            <span>Shop now</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
                 <div class="imgcard">
                     <img src="/images/card4.png" alt="">
@@ -304,10 +312,12 @@
                     <p>
                         Unlock 100+ great games and EA Play, plus get your first month for $1. Offer available to new subscribers only.
                     </p>
-                    <a href="#">
-                        <span>Join now</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                    <div>
+                        <a href="#">
+                            <span>Join now</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
@@ -336,10 +346,12 @@
                     <p>
                         Get unprecedented levels of performance and versatility on a 13-inch screen. Available with Windows 11.
                     </p>
-                    <a href="#">
-                        <span>Shop now</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                    <div>
+                        <a href="#">
+                            <span>Shop now</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
                 <div class="imgcard">
                     <img src="/images/card6.png" alt="">
@@ -347,10 +359,12 @@
                     <p>
                         Online meetings, chat and shared cloud storage - all in one place.
                     </p>
-                    <a href="#">
-                        <span>Sign up for free</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                    <div>
+                        <a href="#">
+                            <span>Sign up for free</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
                 <div class="imgcard">
                     <img src="/images/card7.png" alt="">
@@ -358,10 +372,12 @@
                     <p>
                         Stay a step ahead with powerful apps for productivity, connection and security.
                     </p>
-                    <a href="#">
-                        <span>Shop now</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                    <div>
+                        <a href="#">
+                            <span>Shop now</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
                 <div class="imgcard">
                     <img src="/images/card8.png" alt="">
@@ -369,10 +385,12 @@
                     <p>
                         Designed for hybrid work. Powerful for employees. Consistent for IT. Secure for all.
                     </p>
-                    <a href="#">
-                        <span>Learn more</span>
-                        <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
-                    </a>
+                    <div>
+                        <a href="#">
+                            <span>Learn more</span>
+                            <img class= imgcardarrow src="images/right-arrow.svg" alt="Proceed">
+                        </a>
+                    </div>
                 </div>
             </section>
         </div>
@@ -390,12 +408,21 @@
                     </div>
                 </div>
             </section>
-            <section class="socialarea">
+            <!-- <section class="socialarea">
                 <h4>Follow Microsoft</h4>
                 <a href="#"><img src="/images/facebook.svg" alt="Facebook" class="social-icon" /></a>
                 <a href="#"><img src="/images/twitter.svg" alt="Twitter" class="social-icon" /></a>
                 <a href="#"><img src="/images/youtube.svg" alt="Youtube" class="social-icon" /></a>
                 <a href="#"><img src="/images/instagram.svg" alt="Instagram" class="social-icon" /></a>
+            </section> -->
+        </div>
+        <div class="container">
+            <section class="socialarea">
+                <h4>Follow Microsoft</h4>
+                <a href="#"><img src="/images/facebook.svg" alt="Free Facebook Icon from Unicons Font on IconScout" class="social-icon" title="Free Facebook Icon from Unicons Font on IconScout"/></a>
+                <a href="#"><img src="/images/twitter.svg" alt="Free Twitter Icon from Unicons Font on IconScout" title="Free Twitter Icon from Unicons Font on IconScout" class="social-icon" /></a>
+                <a href="#"><img src="/images/youtube.svg" alt="Free Youtube Icon from Unicons Font on IconScout" title="Free Youtube Icon from Unicons Font on IconScout" class="social-icon" /></a>
+                <a href="#"><img src="/images/instagram.svg" alt="Free Instagram Icon from Unicons Font on IconScout" title="Free Instagram Icon from Unicons Font on IconScout" class="social-icon" /></a>
             </section>
         </div>
     </div>
@@ -403,7 +430,7 @@
     <div class="container">
         <div class="sitemap">
             <ul class="footer-column">
-                <a href="#"><li>What's New</li></a>
+                <a href="#"><li>What's new</li></a>
                 <a href="#"><li>Surface Pro 8</li></a>
                 <a href="#"><li>Surface Laptop Studio</li></a>
                 <a href="#"><li>Surface Pro X</li></a>
