Back to top button added

--- a/index.html
+++ b/index.html
@@ -425,6 +425,9 @@
                 <a href="#"><img src="/images/instagram.svg" alt="Free Instagram Icon from Unicons Font on IconScout" title="Free Instagram Icon from Unicons Font on IconScout" class="social-icon" /></a>
             </section>
         </div>
+        <div class="container">
+            <button type="button" class="back-to-top"><img src="images/big-left-arrow.svg" alt="Return to top of the page" /><span>Back to top</span></button>
+        </div>
     </div>
 <footer>
     <div class="container">
@@ -495,8 +498,9 @@
             </ul>
         </div>
         <div class="language-copyright">
+            <a href="#"><li>English (United Kingdom)</li></a>
            <ul>
-                <a href="#"><li>English (United Kingdom)</li></a>
+                <!-- <a href="#"><li>English (United Kingdom)</li></a> -->
                 <a href="#"><li>Contact Microsoft</li></a>
                 <a href="#"><li>Privacy</li></a>
                 <a href="#"><li>Manage cookies</li></a>
