--- a/index.html
+++ b/index.html
@@ -426,12 +426,13 @@
             </section>
         </div>
         <div class="container">
-            <button type="button" class="back-to-top"><img src="images/big-left-arrow.svg" alt="Return to top of the page" /><span>Back to top</span></button>
+            <!-- <button type="button" class="back-to-top"><img src="images/big-left-arrow.svg" alt="Return to top of the page" /><span>Back to top</span></button> -->
+            <a href="#" class="back-to-top"><img src="images/big-left-arrow.svg" alt="Return to top of the page" /><span>Back to top</span></a>
         </div>
     </div>
 <footer>
     <div class="container">
-        <div class="sitemap">
+        <div class="sitemap" id="sitemap_">
             <ul class="footer-column">
                 <a href="#"><li>What's new</li></a>
                 <a href="#"><li>Surface Pro 8</li></a>
