--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </dialog>
     </div>
-    <div class="cookies-banner">
+    <div class="cookies-banner" style="display: none;">
         <div class="cookies-content">
             <div>
                 <img src="images/information.png" alt="information icon" />
