--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <li><a href="#">Support</a></li>
                     <li id="more_dropdown">
                         <a href=#><span>More</span></a>
-                        <img src="/images/left-arrow.svg" />
+                        <img src="/static/left-arrow.svg" />
                         <!-- More 1 -->
                         <div class="more_div more_1">
                             <div>Deals</div>
@@ -110,7 +110,7 @@
                     </li>
                     <li id="all_microsoft">
                         <a href="#"><span>All Microsoft</span></a>
-                        <img src="/images/left-arrow.svg" />
+                        <img src="/static/left-arrow.svg" />
                         <div class="all_micro_content">
                             <div id="column-container">
                                 <ul class="footer-column">
@@ -175,7 +175,7 @@
                             <div>
                                 <button type="button" class="go-to-sitemap">
                                     VIEW SITEMAP
-                                    <img src="/images/left-arrow.svg" />
+                                    <img src="/static/left-arrow.svg" />
                                 </button>
                             </div>
                         </div>
@@ -191,7 +191,7 @@
         <div class="container">
             <section class="slider">
                 <div class="slide">
-                    <img src="/images/showcase_xlarge.png" alt="Showcase Image Slide 1" />
+                    <img src="/static/showcase_xlarge.png" alt="Showcase Image Slide 1" />
                     <div>
                         <h2>Microsoft Store Sustainability</h2>
                         <p>Explore Microsoft's commitment to sustainability including, our products that use eco-friendly materials and information on how you can make a more environmentally informed purchase</p>
@@ -204,7 +204,7 @@
                     </div>
                 </div>
                 <div class="slide">
-                    <img src="/images/microsoft365_xlarge.JPG" alt="Showcase Image Slide 2" />
+                    <img src="/static/microsoft365_xlarge.jpg" alt="Showcase Image Slide 2" />
                     <div>
                         <h2>Microsoft 365</h2>
                         <p>Turn your ideas into reality, stay safer online and off, and focus on what matters most with Microsoft 365 apps</p>
@@ -224,12 +224,12 @@
             </section>
         </div>
         <div class="slider-nav">
-            <button class="slider__btn slider__btn--play pause"><img src="/images/play-button_2.png" alt="Play Slideshow"></button>
-            <button class="slider__btn slider__btn--left"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
+            <button class="slider__btn slider__btn--play pause"><img src="/static/play-button_2.png" alt="Play Slideshow"></button>
+            <button class="slider__btn slider__btn--left"><img src="/static/left-arrow.svg" alt="Play Slideshow"></button>
             <div class="dots">
                 <!-- Generated Dots -->
             </div>
-            <button class="slider__btn slider__btn--right"><img src="/images/left-arrow.svg" alt="Play Slideshow"></button>
+            <button class="slider__btn slider__btn--right"><img src="/static/left-arrow.svg" alt="Play Slideshow"></button>
         </div>
         <div class="container">
             <section class="linkcards">
@@ -323,7 +323,7 @@
         </div>
         <div class="container">
             <section class="showcase-two">
-                <img src="/images/controllers_xlarge.png" alt="Xbox Controllers">
+                <img src="/static/controllers_xlarge.png" alt="Xbox Controllers">
                 <div id="showcase-internaldiv">
                     <h2>Xbox controllers</h2>
                     <p>Elite, wireless, adaptive - find the controller that fits your style of play</p>
@@ -396,7 +396,7 @@
         </div>
         <div class="container">
             <section class="showcase-three">
-                <img src="/images/showcase3_xlarge.jpg" alt="Earth Day">
+                <img src="/static/showcase3_xlarge.jpg" alt="Earth Day">
                 <div id="showcase-internaldiv">
                     <h2>For Earth Day and every day</h2>
                     <p>This April, we celebrate the boundary pushing and innovation that helps to create a brighter, cleaner, more sustainable future for us all</p>
